design: colors, observing, navbar

--- a/phenology-frontend/src/app/app.component.html
+++ b/phenology-frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="height_100 d-flex flex-column">
   <app-navigation></app-navigation>
 
-  <div class="container-fluid p-0">
+  <div class="">
     <div class="row">
       <div class="col-12">
         <router-outlet></router-outlet>
