--- a/phenology-frontend/src/app/page/article/article.component.html
+++ b/phenology-frontend/src/app/page/article/article.component.html
@@ -28,7 +28,7 @@
   <div class="d-flex justify-content-center">
     <style>
       .my-pagination /deep/ .ngx-pagination .current {
-        background: darkgreen;
+        background: rgb(0, 80, 0);
       }
     </style>
     <pagination-controls
