--- a/phenology-frontend/src/app/page/challenge/challenge.component.scss
+++ b/phenology-frontend/src/app/page/challenge/challenge.component.scss
@@ -1,3 +1,5 @@
+@use '../../../styles.scss';
+
 h1 {
   font-size: 6vw;
 }
@@ -12,7 +14,7 @@ h2 {
 
 .card__shadow {
   box-shadow: 0px 20px 30px -20px;
-  border-top: 3px solid rgb(0, 212, 35);
+  border-top: 3px solid styles.$lighten-20-base-color;
 }
 
 i {
