--- a/phenology-frontend/src/app/page/forgot-password/forgot-password.component.html
+++ b/phenology-frontend/src/app/page/forgot-password/forgot-password.component.html
@@ -1,16 +1,16 @@
 <h1 class="m-5 text-center">Új jelszó kérése</h1>
 
 <div *ngIf="forgotPasswordStatus === ''" class="m-5">
-  <h3 class="text-center">
+  <h5 class="text-center">
     Kérjük adja meg az email címét, amellyel korábban regisztrált oldalunkon!
     <br />
     Erre elküldünk egy linket, mellyel új jelszót állíthat be.
-  </h3>
+  </h5>
   <div class="row d-flex justify-content-center align-items-center">
-    <div class="login col-10 col-lg-6 my-5 p-5">
+    <div class="login col-10 col-lg-6 mt-2 p-2">
       <form (ngSubmit)="onSendRequest()">
         <div class="form-group">
-          <label>Email</label>
+          <label>Email cím</label>
           <input
             class="form-control"
             name="email"
@@ -18,26 +18,27 @@
             type="email"
           />
         </div>
-        <button type="submit" class="btn btn-primary m-2">OK</button>
-        <button type="button" class="btn btn-primary m-2" (click)="onCancel()">Mégsem</button>
+        <div class="d-flex justify-content-center">
+          <button type="submit" class="btn btn-primary m-2">OK</button>
+          <button type="button" class="btn btn-primary m-2" (click)="onCancel()">Mégsem</button>
+        </div>
       </form>
-      <p>{{ email }}</p>
     </div>
   </div>
 </div>
 
 <div *ngIf="forgotPasswordStatus === 'success'" class="m-3">
-  <h3 class="m-2">Az új jelszó igénylése sikerült.</h3>
-  <h5 class="m-2">
+  <h3 class="m-2 text-center">Az új jelszó igénylése sikerült.</h3>
+  <h5 class="m-2 text-center">
     A megadott email címre küldtünk egy levelet, melyben a linkre kattintva
     beállíthat új jelszót. Köszönjük!
   </h5>
 </div>
 
 <div *ngIf="forgotPasswordStatus === 'failed'" class="m-3">
-  <h3 class="m-2">Az új jelszó igénylése nem sikerült.</h3>
-  <h5 class="m-2">
+  <h3 class="m-2 text-center">Az új jelszó igénylése nem sikerült.</h3>
+  <h5 class="m-2 text-center">
     Kérjük adjon meg olyan email címet, amellyel korábban regisztrált
-    oldalunkon, vagy regiztráljon újra. Köszönjük!
+    oldalunkon, vagy regisztráljon újra. Köszönjük!
   </h5>
 </div>
