--- a/phenology-frontend/src/app/common/footer/footer.component.html
+++ b/phenology-frontend/src/app/common/footer/footer.component.html
@@ -2,13 +2,15 @@
   <footer
     class="d-flex flex-wrap justify-content-lg-between justify-content-center align-items-center py-3 border-top"
   >
-    <div class="col-md-4 d-flex align-items-center justify-content-start">
+    <div
+      class="col-md-4 d-flex align-items-center justify-content-center justify-content-lg-start"
+    >
       <div class="tooltipp border-bottom pb-3 mb-3">
         <span class="text-muted">
           <a
             href="https://www.met.hu/methu/szerzoi_jogok/"
             target="_blank"
-            class="nav-link px-2 text-muted text-center"
+            class="nav-link text-muted text-center"
             >© 2022 Országos Meteorológiai Szolgálat</a
           >
         </span>
@@ -16,7 +18,7 @@
       </div>
     </div>
 
-    <div class="d-flex justify-content-center">
+    <div class="col-md-4 d-flex justify-content-center">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item">
           <a
@@ -37,75 +39,79 @@
       </ul>
     </div>
 
-    <ul class="nav col-md-4 d-flex justify-content-center justify-content-lg-end list-unstyled">
-      <li class="ms-3 twitter">
-        <div class="tooltipp">
-          <a
-            class="text-muted"
-            target="_blank"
-            href="https://twitter.com/meteorologiahu"
-          >
-            <img
-              src="../../../assets/image/Twitter_Logo.png"
-              alt="Twitter Icon"
-              width="30"
-              height="auto"
-            />
-          </a>
-          <!-- <span class="tooltipptext">Twitter</span> -->
-        </div>
-      </li>
-      <li class="ms-3">
-        <div class="tooltipp">
-          <a
-            class="text-muted"
-            target="_blank"
-            href="https://instagram.com/omsz_insta/"
-          >
-            <img
-              src="../../../assets/image/Instagram_Logo.png"
-              alt="Instagram Icon"
-              width="30"
-              height="auto"
-            />
-          </a>
-          <!-- <span class="tooltipptext">Instagram</span> -->
-        </div>
-      </li>
-      <li class="ms-3">
-        <div class="tooltipp">
-          <a
-            class="text-muted"
-            target="_blank"
-            href="https://www.facebook.com/orszagosmeteorologiaiszolgalat/"
-          >
-            <img
-              src="../../../assets/image/Facebook_Logo.png"
-              alt="Facebook Icon"
-              width="30"
-              height="auto"
-            />
-          </a>
-          <!-- <span class="tooltipptext">Facebook</span> -->
-        </div>
-      </li>
-      <li class="ms-3">
-        <div class="tooltipp">
-          <a
-            class="text-muted"
-            target="_blank"
-            href="https://www.youtube.com/c/METHUidojarasjelentes"
-          >
-            <img
-              src="../../../assets/image/Youtube_Logo.png"
-              alt="Youtube Icon"
-              width="30"
-              height="auto"
-            />
-          </a>
-          <!-- <span class="tooltipptext">Youtube</span> -->
-        </div>
-      </li>
-    </ul>
+    <div
+      class="col-md-4 d-flex justify-content-center justify-content-lg-end align-items-center"
+    >
+      <ul class="nav list-unstyled pb-3 mb-3">
+        <li class="ms-3 twitter">
+          <div class="tooltipp">
+            <a
+              class="text-muted"
+              target="_blank"
+              href="https://twitter.com/meteorologiahu"
+            >
+              <img
+                src="../../../assets/image/Twitter_Logo.png"
+                alt="Twitter Icon"
+                width="30"
+                height="auto"
+              />
+            </a>
+            <!-- <span class="tooltipptext">Twitter</span> -->
+          </div>
+        </li>
+        <li class="ms-3">
+          <div class="tooltipp">
+            <a
+              class="text-muted"
+              target="_blank"
+              href="https://instagram.com/omsz_insta/"
+            >
+              <img
+                src="../../../assets/image/Instagram_Logo.png"
+                alt="Instagram Icon"
+                width="30"
+                height="auto"
+              />
+            </a>
+            <!-- <span class="tooltipptext">Instagram</span> -->
+          </div>
+        </li>
+        <li class="ms-3">
+          <div class="tooltipp">
+            <a
+              class="text-muted"
+              target="_blank"
+              href="https://www.facebook.com/orszagosmeteorologiaiszolgalat/"
+            >
+              <img
+                src="../../../assets/image/Facebook_Logo.png"
+                alt="Facebook Icon"
+                width="30"
+                height="auto"
+              />
+            </a>
+            <!-- <span class="tooltipptext">Facebook</span> -->
+          </div>
+        </li>
+        <li class="ms-3">
+          <div class="tooltipp">
+            <a
+              class="text-muted"
+              target="_blank"
+              href="https://www.youtube.com/c/METHUidojarasjelentes"
+            >
+              <img
+                src="../../../assets/image/Youtube_Logo.png"
+                alt="Youtube Icon"
+                width="30"
+                height="auto"
+              />
+            </a>
+            <!-- <span class="tooltipptext">Youtube</span> -->
+          </div>
+        </li>
+      </ul>
+    </div>
   </footer>
 </div>
