format input fields, responsive cards on home

--- a/phenology-frontend/src/app/page/home/home.component.html
+++ b/phenology-frontend/src/app/page/home/home.component.html
@@ -7,10 +7,10 @@
 
 <div class="container">
   <div class="row d-flex justify-content-center">
-    <div class="card-deck" >
-      <!-- class="row-cols-md-12 row-cols-lg-4 row-cols-xl-4 d-flex justify-content-center" -->
-
-      <div class="card shadow bg-body rounded card-deck__card mx-4">
+    <div
+      class="col-lg-4 col-12 w-20 my-2 card-group d-flex justify-content-center"
+    >
+      <div class="card h-100 shadow rounded">
         <img
           src="../../../assets/home_image/gyongyvirag.jpg"
           class="card-img-top"
@@ -20,16 +20,20 @@
           <h5>Mi a jelentősége?</h5>
           <h3 class="card-title">Növényfenológiai megfigyelések</h3>
           <p class="card-text">
-            A növények fejlődése összegzi a környezeti hatásokat, így a növény kiváló meteorológiai eszköz
-            az éghajlat, az éghajlat változásának jellemzésére.
+            A növények fejlődése összegzi a környezeti hatásokat, így a növény
+            kiváló meteorológiai eszköz az éghajlat, az éghajlat változásának
+            jellemzésére.
           </p>
           <div class="card-footer mt-auto">
             <a [routerLink]="'/history'" class="card-link">Bővebben</a>
           </div>
         </div>
       </div>
-
-      <div class="card shadow bg-body rounded card-deck__card mx-4">
+    </div>
+    <div
+      class="col-lg-4 col-12 w-20 my-2 card-group d-flex justify-content-center"
+    >
+      <div class="card shadow bg-body rounded">
         <img
           src="../../../assets/home_image/megfigyelok.jpg"
           class="card-img-top"
@@ -48,8 +52,11 @@
           </div>
         </div>
       </div>
-
-      <div class="card shadow bg-body rounded card-deck__card mx-4">
+    </div>
+    <div
+      class="col-lg-4 col-12 w-20 my-2 card-group d-flex justify-content-center"
+    >
+      <div class="card shadow bg-body rounded">
         <img
           src="../../../assets/home_image/termes.jpg"
           class="card-img-top"
