--- a/phenology-frontend/src/app/app.component.html
+++ b/phenology-frontend/src/app/app.component.html
@@ -2,7 +2,7 @@
   <app-navigation></app-navigation>
 
   <div class="">
-    <div class="row">
+    <div class="">
       <div class="col-12">
         <router-outlet></router-outlet>
       </div>
