--- a/phenology-frontend/src/app/page/profile/profile.component.html
+++ b/phenology-frontend/src/app/page/profile/profile.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="signedin">
-  <div class="card my-2 shadow">
-    <h4 class="card-header">Profil szerkesztése</h4>
+<div *ngIf="signedin" class="container">
+  <div class="card my-5 px-2 px-md-0 shadow col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-3">
+    <h4 class="card-header text-center">Profil szerkesztése</h4>
     <div *ngIf="!profileUpdateOK">
       <div class="card-body">
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
@@ -98,8 +98,8 @@
             </div>
           </div>
 
-          <div class="form-group m-2">
-            <button [disabled]="loading" class="btn btn-primary">
+          <div class="form-group m-2 d-flex justify-content-center">
+            <button [disabled]="loading" class="btn btn-primary m-2">
               <span
                 *ngIf="loading"
                 class="spinner-border spinner-border-sm mr-1"
@@ -118,8 +118,8 @@
             <button
               type="button"
               class="btn btn-primary m-2"
-              data-bs-toggle="modal"
-              data-bs-target="#staticBackdrop"
+              data-toggle="modal"
+              data-target="#staticBackdrop"
             >
               Profil törlése
             </button>
@@ -145,7 +145,7 @@
             <button
               type="button"
               class="btn-close"
-              data-bs-dismiss="modal"
+              data-dismiss="modal"
               aria-label="Close"
             ></button>
           </div>
@@ -160,7 +160,7 @@
             <button
               type="button"
               class="btn btn-secondary"
-              data-bs-dismiss="modal"
+              data-dismiss="modal"
             >
               Mégsem
             </button>
