--- a/phenology-frontend/src/app/page/personal-observed-datas/personal-observed-datas.component.scss
+++ b/phenology-frontend/src/app/page/personal-observed-datas/personal-observed-datas.component.scss
@@ -54,7 +54,7 @@
 }
 
 /* The Close Button */
-.close {
+.close__photo {
   position: absolute;
   top: 15px;
   right: 35px;
@@ -64,8 +64,8 @@
   transition: 0.3s;
 }
 
-.close:hover,
-.close:focus {
+.close__photo:hover,
+.close__photo:focus {
   color: #bbb;
   text-decoration: none;
   cursor: pointer;
