--- a/phenology-frontend/src/styles.scss
+++ b/phenology-frontend/src/styles.scss
@@ -10,3 +10,7 @@ $darken-base-color: darken($base-color, 5%);
 $base-font: Roboto;
 
 $base-box-shadow: 0px 20px 30px -20px;
+
+.toast-success {
+  background-color: $base-color;
+}
